# ONE

./: LICENSE
Setup/: Setup1.sln  harvest.bat
Setup/ONE_Setup/: Bundle.wxs  ONE_Setup.wixproj
Setup/ONE_setup_file/: ONE_setup_file.wixproj  Product.wxs  error.txt  source.wxs
Setup/Setup1/: Setup1.isl
Setup/macosx/: ONE.pkgproj
changes/ONE/code/chrome/app/: chrome_main_delegate.cc
changes/ONE/code/chrome/browser/background/: background_mode_manager.cc
changes/ONE/code/chrome/browser/extensions/: extension_util.cc  external_provider_impl.cc
changes/ONE/code/chrome/browser/profiles/: profiles_state.cc
changes/ONE/code/chrome/browser/search/: local_ntp_source.cc  most_visited_iframe_source.cc
changes/ONE/code/chrome/browser/ui/startup/: default_browser_prompt.cc  startup_browser_creator.cc  startup_browser_creator_impl.cc  (+1 more)
changes/ONE/code/chrome/common/: chrome_content_client.cc  url_constants.cc
changes/ONE/code/chrome/installer/util/: browser_distribution.cc
changes/ONE/code/components/sync_driver/: sync_prefs.cc
changes/ONE/code/device/bluetooth/: bluetooth_task_manager_win.cc
changes/ONE/code60/chrome/browser/profiles/: profiles_state.cc
changes/ONE/code60/chrome/common/: url_constants.cc
changes/ONE/code60/chrome/installer/util/: browser_distribution.cc
changes/ONE/patch/: all_patch.patch  background_mode_manager.patch  browser_distribution.patch  default_browser_prompt.patch  profile_management_switches.patch  profiles_state.patch  startup_browser_creator.patch
changes/gn/mac/: args.gn
changes/gn/win/: args.gn
(+7 files in other folders)
